--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-autocomplete-input": "github:mrlaessig/react-native-autocomplete-input",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.0.4",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0"
